--- a/package.json
+++ b/package.json
@@ -11,11 +11,23 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap-sass": "^3.4.1",
+        "browser-sync": "^2.26.3",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
+        "font-awesome": "^4.7.0",
+        "ionicons": "^3.0.0",
+        "jquery": "^3.3.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
+        "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "select2": "~4.0",
+        "toastr": "^2.1.4",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.11",
+        "webpack-dev-server": "^3.1.11"
     }
 }
