--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "appointer/swaggervel": "dev-master",
         "doctrine/dbal": "~2.3",
         "fideloper/proxy": "^4.0",
-        "infyomlabs/adminlte-templates": "6.0.x-dev",
-        "infyomlabs/laravel-generator": "6.0.x-dev",
-        "infyomlabs/swagger-generator": "dev-master",
+        "infyomlabs/adminlte-templates": "^1.0",
+        "infyomlabs/laravel-generator": "^1.0",
         "laravel/framework": "^6.0",
         "laravel/helpers": "^1.1",
         "laravel/tinker": "^1.0",
@@ -24,9 +22,9 @@
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.6",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laravel/ui":"^1.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
